# excali_script

./: .gitignore  Cargo.toml  README.md  out.ast  out.excalidraw  project_plan.md  sample.excalidraw  test.excalidraw
sample/: baz.js  root.js
sample/otherdir/: otherdir.js
samples/: bar.js  foo.js  root.js
samples/dir/: indir.js
src/: excalidraw.rs  jsfiles.rs  jsops.rs  main.rs  module.rs
