[package]
name = "excali_ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "0.122.24"
swc_common = { version = "0.29.13", features=["tty-emitter"] }
swc_ecma_ast = "0.94.17"
walkdir = "2"
glob = "0.3.1"
