[package]
name = "excali_ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "0.137.1"
swc_common = { version = "0.31.16", features=["tty-emitter"] }
swc_ecma_ast = "0.107.0"
walkdir = "2.3.3"
glob = "0.3.1"


[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]